# edgarbrief

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  CLAUDE.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260617_0100_0001_initial_schema.py  20260617_1500_0002_thread_updated_at_trigger.py  20260617_1700_0003_uuid_pk_server_defaults.py  20260617_1800_0004_source_documents_add_markdown.py  20260620_1200_0005_demo_usage.py  20260620_2100_0006_demo_ip_usage.py
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: auth.py  chat.py  deps.py  threads.py
backend/app/assistant/: __init__.py  agent.py  deps.py  instructions.md  outputs.py
backend/app/auth/: dependencies.py
backend/app/chat/: orchestrator.py  stream.py  streaming.py  titling.py
backend/app/database/: session.py  supabase.py  threads.py
backend/app/grounding/: __init__.py  validator.py
backend/app/quota/: __init__.py  client_ip.py  service.py
backend/app/retrieval/: __init__.py  embedding.py  fusion.py  queries.py  retriever.py
backend/ingest/: chunk.py  chunk_documents.py  load_source_documents.py
backend/scripts/: smoke_questions.py
backend/tests/: conftest.py
backend/tests/assistant/: test_agent.py  test_outputs.py
backend/tests/auth/: test_dependencies.py
backend/tests/chat/: test_orchestrator.py  test_stream.py  test_streaming.py  test_titling.py
backend/tests/grounding/: test_validator.py
backend/tests/ingest/: test_chunk.py
data/: README.md  convert.py
(+62 files in other folders)
