[project]
name = "edgarbrief"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.136.3",
    "google-genai==2.8.0",
    "httpx==0.28.1",
    "pgvector==0.4.2",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pydantic-ai==1.106.0",
    "pydantic-settings==2.14.1",
    "sqlalchemy==2.0.50",
    "structlog==26.1.0",
    "supabase==2.31.0",
    "uvicorn==0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Project is named "edgarbrief" but the importable package dir is app/.
packages = ["app"]

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "docling==2.101.0",
    "ipykernel==7.2.0",
    "pytest==9.0.3",
    "ruff==0.15.16",
]
